# rusty_box

./: .gitignore  APKINDEX  BIOS_BOOT_STATUS.md  BIOS_ROM_MEMORY_MAPPING_ANALYSIS.md  BIOS_STACK_CORRUPTION_INVESTIGATION.md  BOCHS_DEVICE_INITIALIZATION_ANALYSIS.md  CLAUDE.md  CODE_COMPARISON_REPORT.md  CONTRIBUTING.md  Cargo.toml  DECODER_BUG_F6_IMMEDIATE.md  DECODER_BUG_FIX_SUMMARY.md  Executed instructions.txt  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INVESTIGATION_NOTES.md  OUTGOING_CALLS_VERIFICATION.md  PROGRESS_STATUS.md  README.md  RUSTY_BOX_KNOWLEDGE_BASE.md  THIRD-PARTY-LICENSES  alpine_key.pem  alpine_key_4096.pem  apkindex_data.tar  bash.exe.stackdump  bios_out.txt  bios_test.txt  bochs_test.bxrc  build_output.txt  check_065d.rs  check_addr_19.rs  check_bios.rs  check_bios_call.rs  check_start.rs  cmos  config  cpu0  dma  floppy  gen_fix.py  (+29 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: ALPINE_DIRECT_BOOT_INVESTIGATION.md  AUDIT_STATUS.md  BIOS_EXECUTION_STATUS.md  BIOS_LOADING_COMPARISON.md  BIOS_LOADING_SEQUENCE_VERIFIED.md  BIOS_NO_OUTPUT_INVESTIGATION.md  BP_REGISTER_CORRUPTION_BUG.md  CS_BASE_CORRUPTION_FIX.md  DECODER_BUGS.md  DECODER_FIX_AUDIT.md  DECODER_OPERAND_BUG.md  DLXLINUX_BOOT_SUMMARY.md  FAR_JUMP_BUG_INVESTIGATION.md  FAR_JUMP_DECODER_BUG.md  ISOLINUX_DEBUG.md  MEMORY_AND_STACK_INVESTIGATION.md  MEMORY_MAPPING_ZEROS_BUG.md  MOV_INSTRUCTION_BUG_FIX.md  RAYON_PARALLELISM.md  SESSION_2026-02-10_BIOS_FIX.md  STACK_OVERFLOW_FIX.md  VGA_BIOS_LOADING_SEQUENCE_BUG.md  audit-session46.md  audit_stubs.md  bochs_bugs_found.md  session53_plan_status.md
examples/: init_and_run.rs
examples/rusty_box_uefi/: Cargo.toml  README.md  make_iso.py  make_vmdk.py
examples/rusty_box_uefi/src/: main.rs
examples/rusty_box_web/: Cargo.toml  README.md  index.html
examples/rusty_box_web/src/: app.rs  main.rs
old_cursor_plans/: align_hardware_initialization_with_original_bochs_399c8750.plan.md  bios_loading_and_device_initialization_3ee517bf.plan.md  bios_loading_and_device_initialization_4b8bbf0d.plan.md  (+25 more)
rusty_box/: Cargo.toml  INITIALIZATION_COMPARISON.md  KEYBOARD_INPUT_IMPLEMENTATION.md  VGA_DEBUGGING.md  bios_out.txt  new_reg.txt  old_reg.txt  refactor.patch
rusty_box/benches/: cpu_bench.rs
rusty_box/examples/: README.md  alpine.rs  alpine_direct.rs  alpine_strace.rs  bios_boot.rs  bios_boot.rs.bak  check_struct_sizes.rs  dlxlinux.rs  hardware_init.rs  init_and_run.rs  linux_boot.rs  multi_instance.rs  shellcode_trace.rs  syscalls.rs
rusty_box/examples/alpine/: alpine_strace.rs  syscalls.rs
rusty_box/examples/gui/: dlxlinux_egui.rs  rusty_box_egui.rs
rusty_box/examples/shellcode/: shellcode_trace.rs  syscalls.rs
rusty_box/src/: boot.rs  config.rs  crc.rs  emulator.rs  emulator_api.rs  error.rs  lib.rs  params.rs  pc_system.rs  ring_buffer.rs  snapshot.rs
rusty_box/src/cpu/: access.rs  aes.rs  api_bridge.rs  apic.rs  arith16.rs  arith32.rs  arith64.rs  arith8.rs  avx.rs  avx512.rs  avx512_bcast.rs  avx512_bw.rs  avx512_cmp.rs  avx512_cvt.rs  avx512_fma.rs  avx512_gather.rs  avx512_insert.rs  avx512_int.rs  avx512_mask.rs  avx512_misc.rs  avx512_perm.rs  avx512_round.rs  avx512_scalar.rs  bcd.rs  bit.rs  bit16.rs  bit32.rs  bit64.rs  bmi32.rs  bmi64.rs  builder.rs  cet.rs  cpu.rs  cpu_getters_and_setters.rs  cpu_macros.rs  cpuid.rs  cpustats.rs  crc32.rs  crregs.rs  ctrl_xfer.rs  (+75 more)
rusty_box/src/cpu/arith/: arith16.rs  arith32.rs  arith8.rs  mod.rs
rusty_box/src/cpu/avx/: amx.rs
rusty_box/src/cpu/cpudb/: mod.rs
rusty_box/src/cpu/cpudb/amd/: amd_ryzen.rs  mod.rs
rusty_box/src/cpu/cpudb/intel/: core_i7_skylake.rs
rusty_box/src/cpu/data_xfer/: data_xfer16.rs  data_xfer32.rs  data_xfer64.rs  data_xfer8.rs  mod.rs
rusty_box/src/cpu/decoder/: mod.rs
rusty_box/src/cpu/fpu/: f2xm1.rs  ferr.rs  fpatan.rs  fprem.rs  fpu.rs  fpu_arith.rs  fpu_cmov.rs  fpu_compare.rs  fpu_const.rs  fpu_load_store.rs  fpu_misc.rs  fpu_trans.rs  fsincos.rs  fyl2x.rs  mod.rs  poly.rs
rusty_box/src/cpu/instrumentation/: bochs.rs  ctx.rs  hooks.rs  mod.rs  registry.rs  types.rs
rusty_box/src/cpu/softfloat3e/: extf80_addsub.rs  extf80_class.rs  extf80_compare.rs  extf80_div.rs  extf80_mul.rs  extf80_roundToInt.rs  extf80_scale.rs  extf80_sqrt.rs  extf80_to_f32.rs  extf80_to_f64.rs  extf80_to_i16.rs  extf80_to_i32.rs  extf80_to_i64.rs  f128.rs  f16_mul_add.rs  f32_mul_add.rs  f32_to_extf80.rs  f64_mul_add.rs  f64_to_extf80.rs  i32_to_extf80.rs  i64_to_extf80.rs  internals.rs  mod.rs  primitives.rs  softfloat.rs  softfloat_types.rs  specialize.rs
rusty_box/src/cpu/tests/: register_tests.rs
rusty_box/src/gui/: eframe_app.rs  egui_gui.rs  gui_trait.rs  keymap.rs  keymap_tests.rs  mod.rs  nogui.rs  shared_display.rs  siminterface.rs  term.rs  trait.rs  vga_font.rs
rusty_box/src/iodev/: acpi.rs  acpi_dsdt_aml.inc  acpi_tables.rs  cmos.rs  devices.rs  dma.rs  fw_cfg.rs  geforce.rs  harddrv.rs  ioapic.rs  keyboard.rs  mod.rs  pci.rs  pci2isa.rs  pci_ide.rs  pic.rs  pit.rs  serial.rs  vga.rs
rusty_box/src/memory/: error.rs  memory_rusty_box.rs  memory_stub.rs  misc_mem.rs  misc_mem.rs.bak  mmio.rs  mod.rs  permissions.rs  tests.rs
rusty_box/src/memory_old/: error.rs  memory_stub.rs  misc_mem.rs
rusty_box/src/misc/: bswap.rs  mod.rs
rusty_box_decoder/: Cargo.toml  bios_out.txt
rusty_box_decoder/examples/: test_call.rs
rusty_box_decoder/fuzz/: Cargo.toml
rusty_box_decoder/fuzz/fuzz_targets/: fuzz_fetchdecode32_16.rs  fuzz_fetchdecode32_32.rs  fuzz_fetchdecode64.rs
rusty_box_decoder/src/: ACCESSING_INSTRUCTIONS.md  bswap.rs  disasm.rs  error.rs  features.rs  fetchdecode.rs  fetchdecode32.rs  fetchdecode64.rs  fetchdecode_generated.rs  fetchdecode_opmap_0f3a.rs  fetchdecode_x87.rs  ia_opcodes.rs  instr.rs  instr_generated.rs  instruction.rs  lib.rs  opcode.rs  simple_decoder.rs  test_call_decode.rs  tests.rs  typed.rs
rusty_box_decoder/src/decoder/: decode32.rs  decode64.rs  mod.rs  opmap.rs  opmap_0f38.rs  opmap_0f3a.rs  tables.rs  x87.rs
rusty_box_decoder/tests/: test_far_jump.rs  test_mont_loop.rs
(+83 files in other folders)
