[workspace]
members = ["rusty_box", "rusty_box_decoder", "examples/rusty_box_web"]
default-members = ["rusty_box"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LGPL-2.1-or-later"
authors = ["Aslan Gurtsiev", "The Bochs Project (original C++ implementation)"]
repository = "https://github.com/r3bb1t/rusty_box"
homepage = "https://github.com/r3bb1t/rusty_box"

[workspace.dependencies]
tracing = { version = "0.1", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
thiserror = "2"
byteorder = "1.5"
spin = { version = "0.10", default-features = false, features = ["once"] }
bitflags = "2"
paste = "1.0"
tracing-subscriber = { version = "0.3" }
egui = "0.34"
eframe = { version = "0.34", default-features = false }