[package]
name = "rusty_box"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A Rust port of the Bochs x86 emulator — boots DLX and Alpine Linux"
keywords = ["x86", "emulator", "bochs", "cpu", "virtualization"]
categories = ["emulators", "simulation"]
autoexamples = false

[lib]
name = "rusty_box"
path = "src/lib.rs"

[features]
default = ["std"]

alloc = []
std = ["tracing/std", "tempfile", "crossterm", "alloc"]
gui-egui = ["dep:egui", "dep:eframe"]
bx_debugger = []
bx_gdb_stub = []
instrumentation = ["alloc"]
profiling = ["std"]

[dependencies]
tracing.workspace = true
thiserror.workspace = true
byteorder.workspace = true
tempfile = { version = "3.20", optional = true }
spin.workspace = true
bitflags.workspace = true
paste.workspace = true
rusty_box_decoder = { path = "../rusty_box_decoder" }
crossterm = { version = "0.29", optional = true }
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true, features = ["default_fonts", "glow"] }

[[example]]
name = "alpine"
path = "examples/alpine.rs"
required-features = ["std"]

[[example]]
name = "dlxlinux"
path = "examples/dlxlinux.rs"
required-features = ["std"]

[[example]]
name = "alpine_direct"
path = "examples/alpine_direct.rs"
required-features = ["std"]

[[example]]
name = "dlxlinux_egui"
path = "examples/gui/dlxlinux_egui.rs"
required-features = ["std", "gui-egui"]

[[example]]
name = "rusty_box_egui"
path = "examples/gui/rusty_box_egui.rs"
required-features = ["std", "gui-egui"]

[[example]]
name = "alpine_strace"
path = "examples/alpine_strace.rs"
required-features = ["std", "instrumentation"]

[[example]]
name = "shellcode_trace"
path = "examples/shellcode_trace.rs"
required-features = ["std", "instrumentation"]


[dev-dependencies]
tracing-subscriber.workspace = true
tracing-appender = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cpu_bench"
harness = false
