[package]
name = "rusty_box_decoder"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[lib]
name = "rusty_box_decoder"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bitflags.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
