[package]
name = "rusty_box_web"
version = "0.0.1"
edition = "2021"
description = "Rusty Box x86 emulator — web frontend"

[dependencies]
rusty_box = { path = "../../rusty_box", default-features = false, features = ["bx_full"] }
eframe = { workspace = true, features = ["glow", "default_fonts"] }
egui.workspace = true
log = "0.4"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
