[package]
name = "rusty_box_decoder-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rusty_box_decoder]
path = ".."

[[bin]]
name = "fuzz_fetchdecode32_32"
path = "fuzz_targets/fuzz_fetchdecode32_32.rs"
test = false
doc = false
bench = false


[workspace]

[[bin]]
name = "fuzz_fetchdecode32_16"
path = "fuzz_targets/fuzz_fetchdecode32_16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fetchdecode64"
path = "fuzz_targets/fuzz_fetchdecode64.rs"
test = false
doc = false
bench = false
